# c-chip8

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE-APACHE  LICENSE-MIT  README.md
include/: beep.h  chip8.h  chip8_status.h  config.h  instr.h  keyboard.h  mem.h  regs.h  screen.h  stack.h  timer.h
src/: beep.c  chip8.c  chip8_status.c  config.c  instr.c  keyboard.c  main.c  mem.c  screen.c  stack.c  timer.c
tests/: test_instr.cpp  test_keyboard.cpp  test_mem.cpp  test_stack.cpp
